--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/sign_in.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/sign_in.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../asset/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../asset/img/favicon.png">
   <title>
-    Access
+    Mak Feedback
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -33,8 +33,8 @@
         <nav
           class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid pe-0">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'dashboard'%}">
-              Access
+            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'home'%}">
+              Mak Feedback
             </a>
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
               data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false"
