--- a/Recess_Project_Template/src/our_app/website/templates/start.html
+++ b/Recess_Project_Template/src/our_app/website/templates/start.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +26,7 @@
             max-width: 700px;
             margin: auto;
             padding: 20px;
-            
+
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
@@ -73,6 +74,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="col-xl-10 col-lg-8">
@@ -80,11 +82,14 @@
                 <h2>Hello! dear student,</h2>
                 <br>
                 <h5>Help us Improve Teaching and Learning!</h5>
-                <p>We value your feedback about your instructors. Please take a moment to fill out the form below and let us know your thoughts on various aspects of the instruction you received.</p>
-                <p class="notice">Your response will be treated with the utmost confidentiality. Please respond honestly and without bias.</p>
+                <p>We value your feedback about your instructors. Please take a moment to fill out the form below and
+                    let us know your thoughts on various aspects of the instruction you received.</p>
+                <p class="notice">Your response will be treated with the utmost confidentiality. Please respond honestly
+                    and without bias.</p>
                 <a href="{% url 'course'%}" class="continue-link">Continue</a>
             </div>
         </div>
     </div>
 </body>
+
 </html>
