--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/dashboard.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../asset/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../asset/img/favicon.png">
   <title>
-    Access
+    Mak Feedback
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -31,16 +31,16 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href="{% url 'dashboard'%}" target="_blank">
+      <a class="navbar-brand m-0" href="{% url 'home'%}" target="_blank">
         <img src="{% static 'asset/img/logo-ct-dark.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold">Access</span>
+        <span class="ms-1 font-weight-bold">Mak Feedback</span>
       </a>
     </div>
     <hr class="horizontal dark mt-0">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link  active" href="{% url 'home'%}">
+          <a class="nav-link  active" href="{% url 'dashboard'%}">
             <div
               class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -373,7 +373,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Courses</p>
                     <h5 class="font-weight-bolder mb-0">
-                       {{ course_items| length }}
+                      {{ course_items| length }}
                       <span class="text-success text-sm font-weight-bolder">received responses</span>
                     </h5>
                   </div>
@@ -493,8 +493,8 @@
                     </div>
                     <h4 class="font-weight-bolder">{{studentDetails.count}}</h4>
                     <div class="progress w-75">
-                      <div class="progress-bar bg-dark w-60" role="progressbar" aria-valuenow="{{studentDetails.count}}" aria-valuemin="0"
-                        aria-valuemax="1000"></div>
+                      <div class="progress-bar bg-dark w-60" role="progressbar" aria-valuenow="{{studentDetails.count}}"
+                        aria-valuemin="0" aria-valuemax="1000"></div>
                     </div>
                   </div>
 
@@ -527,7 +527,7 @@
               <div class="row">
                 <div class="col-lg-6 col-7">
                   <h6>Students</h6>
-                                  </div>
+                </div>
                 <div class="col-lg-6 col-5 my-auto text-end">
                   <div class="dropdown float-lg-end pe-4">
                     <a class="cursor-pointer" id="dropdownTable" data-bs-toggle="dropdown" aria-expanded="false">
