--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/facilities.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/facilities.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="apple-touch-icon" sizes="76x76" href="../asset/img/apple-icon.png" />
   <link rel="icon" type="image/png" href="../asset/img/favicon.png" />
-  <title>Access</title>
+  <title>Mak Feedback</title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
   <!-- Nucleo Icons -->
@@ -29,16 +29,16 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href="{% url 'dashboard'%}" target="_blank">
+      <a class="navbar-brand m-0" href="{% url 'home'%}" target="_blank">
         <img src="{% static 'asset/img/logo-ct-dark.png' %}" class="navbar-brand-img h-100" alt="main_logo" />
-        <span class="ms-1 font-weight-bold">Access</span>
+        <span class="ms-1 font-weight-bold">Mak Feedback</span>
       </a>
     </div>
     <hr class="horizontal dark mt-0" />
     <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="{% url 'home'%}">
+          <a class="nav-link active" href="{% url 'dashboard'%}">
             <div
               class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -390,12 +390,14 @@
                         Accessibility
                       </th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                        Availability
+                      </th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
                         Cleanliness
                       </th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
                         Maintenance
                       </th>
-
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
                         Safety and Security
                       </th>
@@ -405,26 +407,32 @@
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">
                         Comment
                       </th>
-                      <th></th>
+                      <th>Action</th>
                     </tr>
                   </thead>
                   <tbody>
-
-
                     {% for facility in facilities %}
                     <tr>
                       <td>{{ facility.name }}</td>
                       <td>{{ facility.facility_college }}</td>
                       <td>{{ facility.facility_accessibility }}</td>
+                      <td>{{ facility.resource_availability }}</td>
                       <td>{{ facility.cleanliness }}</td>
                       <td>{{ facility.maintenance }}</td>
                       <td>{{ facility.safety }}</td>
                       <td>{{ facility.facility_rating }}</td>
                       <td>{{ facility.comment }}</td>
+                      <td>
+                        <form action="{% url 'delete_facility_feedback' facility.id %}" method="post">
+                          {% csrf_token %}
+                          <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                        </form>
+                      </td>
                     </tr>
                     {% endfor %}
                   </tbody>
                 </table>
+
               </div>
             </div>
           </div>
