--- a/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/profile.html
+++ b/Recess_Project_Template/src/our_app/website/templates/dashboard/pages/profile.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../asset/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../asset/img/favicon.png">
   <title>
-    Access
+    Mak Feedback
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -31,16 +31,16 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
         aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href="{% url 'dashboard'%}" target="_blank">
+      <a class="navbar-brand m-0" href="{% url 'home'%}" target="_blank">
         <img src="{% static 'asset/img/logo-ct-dark.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold">Access</span>
+        <span class="ms-1 font-weight-bold">Mak Feedback</span>
       </a>
     </div>
     <hr class="horizontal dark mt-0">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link  active" href="{% url 'home'%}">
+          <a class="nav-link  active" href="{% url 'dashboard'%}">
             <div
               class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
