--- a/Recess_Project_Template/src/our_app/website/templates/thankyou.html
+++ b/Recess_Project_Template/src/our_app/website/templates/thankyou.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,14 +45,17 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="thank-you-message">
             <h2>Thank You for Your Feedback!</h2>
-            <p>We appreciate you taking the time to share your thoughts with us. Your feedback will help us improve the quality of instruction and enhance the learning experience for all students.</p>
+            <p>We appreciate you taking the time to share your thoughts with us. Your feedback will help us improve the
+                quality of instruction and enhance the learning experience for all students.</p>
             <p>If you have any additional comments or suggestions, feel free to reach out to us anytime.</p>
             <p>Thank you once again!</p>
         </div>
     </div>
 </body>
+
 </html>
